FEAT: Add the possibility to update a user's list
